Small changes like fixed overflow and more responsiveness

--- a/src/components/StarScreenSmall.module.scss
+++ b/src/components/StarScreenSmall.module.scss
@@ -9,7 +9,7 @@ $height: #{$height-raw}px;
   height: $height;
   width: 100%;
   overflow: hidden;
-  position: relative;
+  position: absolute;
 }
 
 @function multiple-box-shadow ($n) {
